APIにダウンロードURL昨日を追加
